syntax = "proto3";

package backend.v1;

// A unique key for a profile.
message ProfileKey {
  string id = 1;
}

// Detailed user information. Used to render the Profile page.
message Profile {
  MiniProfile summary = 1;
  optional string bio = 2;
}

// Basic user information.
message MiniProfile {
  ProfileKey key = 1;
  string username = 2;
  string first_name = 3;
  string last_name = 4;
  optional ProfilePicture profile_picture = 5;
}

// Profile picture information.
message ProfilePicture {
  // The content of the profile picture.
  oneof picture_type {
    // Picture type that colors the profile picture with a color
    string hex_color = 1;
  }
}